- - outline edges, highlight corners, use a checkerboard pattern, or draw a line
boards are now redrawn on load (if style changed / worldedit mistakes)
board control panel toplay indicator color on reload fixed
style "large" (7x7 board squares & matching pieces) is now included
support for Bukkit superperms (Permissions still used first if found, for now...)
AI SUPPORT ADDED :D
- games, if started without another player, will have an AI player
- chess engine taken from jChecs: http://sourceforge.net/projects/jchecs/files/Sources/v0.1.0/jChecs-0.1.0-src.tgz
- settings: ai.min_move_wait - minimum time (seconds) before AI makes a move (0 is faster, but can be disorientatingly quick)
            ai.max_ai_games - limit the maximum concurrent AI game sessions (AI can be CPU-intensive) (0 disables AI)
- AI styles and difficulty can have named personas (defined in the included AI_settings.yml file)


v0.2.2 (18 Jul 2011)
Fixed a problem with en passant moves for Black
Fixed a problem with queen's side castling (was checking for King move to B file instead of C file - /facepalm)
Included twist.yml piece style by @ppp
When creating boards, you can now also add a '-pstyle <style>' option to override the board's default piece style. Should reduce the need to create new board definitions just to try out a different piece style.


v0.2.1 (13 Jul 2011):
Now only tells you if you are actually in one or more games at login


v0.2 (13 Jul 2011)
Piece selection/moving has changed: now pieces are selected & moved by waving a wand item 
- (new config item wand_item, default is empty hand) with left-click. 
- Much more usable, since it can be done from a distance - less running about the board needed. 
- Right-click still works but is deprecated and will print a warning every time it's used. 
- - Right-click will be removed in the next release.
Control panel on the side of each board with chess clock
- to-play indicator
- halfmove clock display
- ply count display