@@ -261,13 +261,13 @@ public class BoardView implements PositionListener {
             if (styleMap.get("highlight_style") != null) {
                 String hs = (String) styleMap.get("highlight_style");
                 try {
-                    highlightStyle = HighlightStyle.valueOf(hs);
+                    highlightStyle = HighlightStyle.getStyle(hs);
                 } catch (IllegalArgumentException e) {
                     ChessCraft.log(Level.WARNING, "unknown highlight_style definition '" + hs + "' when loading " + getName());
-                    highlightStyle = HighlightStyle.Corners;
+                    highlightStyle = HighlightStyle.CORNERS;
                 }
             } else {
-                highlightStyle = HighlightStyle.Corners;
+                highlightStyle = HighlightStyle.CORNERS;
             }
 
             enclosureMat = new MaterialWithData((String) styleMap.get("enclosure"));
@@ -464,20 +464,20 @@ public class BoardView implements PositionListener {
         }
         if (highlight) {
             switch (highlightStyle) {
-                case Edges:
+                case EDGES:
                     for (Location loc : square.walls()) {
                         m = Chess.isWhiteSquare(sqi) ? highlightWhiteSquareMat : highlightBlackSquareMat;
                         (m == null ? highlightMat : m).applyToBlock(loc.getBlock());
                     }
                     break;
-                case Corners:
+                case CORNERS:
                     for (Location loc : square.corners()) {
                         m = Chess.isWhiteSquare(sqi) ? highlightWhiteSquareMat : highlightBlackSquareMat;
                         (m == null ? highlightMat : m).applyToBlock(loc.getBlock());
                     }
                     break;
-                case Checkered:
-                case Chequered:
+                case CHECKERED:
+                case CHEQUERED:
                     for (Location loc : square) {
                         if ((loc.getBlockX() - loc.getBlockZ()) % 2 == 0) {
                             highlightMat.applyToBlock(loc.getBlock());
@@ -532,6 +532,7 @@ public class BoardView implements PositionListener {
             setFrameLights(frameMat);
         } else {
             for (int sqi = 0; sqi < Chess.NUM_OF_SQUARES; ++sqi) {
+                // todo: this code could be better optimized
                 int col = Chess.sqiToCol(sqi);
                 int row = Chess.sqiToRow(sqi);
                 Location locNE = rowColToWorldNE(row, col);
@@ -572,12 +573,12 @@ public class BoardView implements PositionListener {
     }
 
     public void highlightSquares(int from, int to) {
-        if (highlightStyle == HighlightStyle.None) {
+        if (highlightStyle == HighlightStyle.NONE) {
             return;
         }
 
         if (fromSquare >= 0 || toSquare >= 0) {
-            if (highlightStyle == HighlightStyle.Line) {
+            if (highlightStyle == HighlightStyle.LINE) {
                 drawHighlightLine(fromSquare, toSquare, false);
             } else {
                 paintSquareAt(fromSquare);
@@ -586,14 +587,15 @@ public class BoardView implements PositionListener {
         }
         fromSquare = from;
         toSquare = to;
+        
+        doLighting(true);
 
-        if (highlightStyle == HighlightStyle.Line) {
+        if (highlightStyle == HighlightStyle.LINE) {
             drawHighlightLine(fromSquare, toSquare, true);
         } else {
             paintSquareAt(fromSquare, true);
             paintSquareAt(toSquare, true);
         }
-        doLighting(true);
     }
 
     /**
