@@ -100,10 +100,15 @@ public class ChessCraft extends JavaPlugin {
         ChessAI.clearAI();
         for (Game game : Game.listGames()) {
             game.clockTick();
-            game.delete();
         }
         getServer().getScheduler().cancelTasks(this);
         persistence.save();
+        for (Game game : Game.listGames()) {
+            game.delete();
+        }
+        for (BoardView view : BoardView.listBoardViews()) {
+            view.delete();
+        }
         log("disabled!");
     }
 
